Bug 491354 - Missing HOME icon in saved playlist menú
Summary: Missing HOME icon in saved playlist menú
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 3.0.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-06 15:10 UTC by victorhck
Modified: 2024-09-22 11:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot that shows the bug in menu (34.91 KB, image/png)
2024-08-06 15:10 UTC, victorhck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description victorhck 2024-08-06 15:10:22 UTC
Created attachment 172343 [details]
screenshot that shows the bug in menu

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY

After Go to Playlist, Saved Playlist menú, the Home icon is missing (I think is somethig related to "Listas de reproducción guardadas" spanish text, that is too long. (image 1)
If you resize the window, then you can see again de Home icon and text

STEPS TO REPRODUCE
1. Go to Play List, Saved Playlist


OBSERVED RESULT
Missing home icon

EXPECTED RESULT
Show the home icon to go back to main menu

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20240805
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.10.2-1-default (64-bit)
Graphics Platform: Wayland
Processors: 2 × Intel® Pentium® CPU B960 @ 2.20GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 2000


ADDITIONAL INFORMATION

(thaks for your work!!)
Comment 1 Tuomas Nurmi 2024-08-10 11:01:01 UTC
Thank you for the report! I can reproduce: If the browser panel is too narrow to fit the whole "Saved playlists" text, the home icon is indeed left out. Resizing the browser panel immediately makes the icon appear, but if one then goes back, and opens the "Saved playlists" again, the icon is hidden again.
Comment 2 Tuomas Nurmi 2024-09-22 11:27:57 UTC
Git commit acfe6f7f29e66e35ce1d4713fc1f5da2bc003561 by Tuomas Nurmi.
Committed on 22/09/2024 at 11:20.
Pushed by nurmi into branch 'master'.

Add minimal delay to breadcrumb update to ensure home gets shown

Init now equivalent to the codepath when the widget gets resized, which was working
properly all the time.

M  +1    -0    ChangeLog
M  +1    -1    src/browsers/BrowserBreadcrumbWidget.cpp

https://invent.kde.org/multimedia/amarok/-/commit/acfe6f7f29e66e35ce1d4713fc1f5da2bc003561