Add minimal delay to breadcrumb update to ensure home gets shown

Init now equivalent to the codepath when the widget gets resized, which was working
properly all the time.

BUG: 491354